Kubernetes/kubernetes-manifest/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-service-pod-1
  namespace: kube-system
spec:
  serviceAccountName: aws-node
  containers:
  - name: test-container
    image: amazon/aws-cli:latest
    command: ["sleep", "3600"]
