Kubernetes/kubernetes-manifest/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecr-pull-ui-1
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 443
      targetport: 8443
