Kubernetes/kubernetes-manifest/ui-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-app-service
spec:
  selector:
    app: my-app
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 30409
    - name: http
